| Summary: | ASTERISK-28109: pbx_dundi: Does not support chan_pjsip | ||||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | pjsip | ||||
| Date Opened: | 2018-10-15 15:52:29 | Date Closed: | 2023-04-10 14:38:21 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | PBX/pbx_dundi | ||||
| Versions: | GIT 16.0.0 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | With the deprecation of chan_sip on the horizon, the DUNDi module is going to need updating to support chan_pjsip. | ||||||
| Comments: | By: Friendly Automation (friendly-automation) 2023-04-10 14:38:22.158-0500 Change 20056 merged by Friendly Automation: pbx_dundi: Add PJSIP support. [https://gerrit.asterisk.org/c/asterisk/+/20056|https://gerrit.asterisk.org/c/asterisk/+/20056] By: Friendly Automation (friendly-automation) 2023-04-10 14:38:55.565-0500 Change 19702 merged by Friendly Automation: pbx_dundi: Add PJSIP support. [https://gerrit.asterisk.org/c/asterisk/+/19702|https://gerrit.asterisk.org/c/asterisk/+/19702] By: Friendly Automation (friendly-automation) 2023-04-10 14:39:08.607-0500 Change 20057 merged by Friendly Automation: pbx_dundi: Add PJSIP support. [https://gerrit.asterisk.org/c/asterisk/+/20057|https://gerrit.asterisk.org/c/asterisk/+/20057] | ||||||